align facebook and twitter buttons, closes issue #5

--- a/less/endowment.less
+++ b/less/endowment.less
@@ -69,6 +69,8 @@ body { font-family: @default-font;
     .icons { 
       .fb-share-button { display: inline-block; 
                          margin-right: 10px;
+                         position: relative;
+                         top: -6px;
       }
     }
   }
